# AutoFlashCard

./: CMakeLists.txt  README.md  main.cpp  parse  parse.cpp  screen.cpp
Points/: Points.h
ScreenShot/: ScreenShot.cpp  ScreenShot.h
